userdir-ldap (0.3.15+xxx) XXunstable; urgency=low

  * Ship userdir-ldap.schema with the package, add a note that it is
    now version-controlled in bzr on top of the file.
  * Get rid of debian/conffiles, wich only listed files in /etc anyway.
    Those files were already being tagged as conffiles by debhelper,
    resulting in them being listed twice in the resulting binary package.
  * Change the build dependency on debhelper to be versioned >= 5.
  * Change Build-Depends-Indep to Build-Depends.
  * Change the build dependency on python-support to be versioned >= 0.3.
  * ud-roleadd: Do not try to make role accounts of objectClass
    inetOrgPerson, that doesn't work.

 -- Peter Palfrader <weasel@debian.org>  Tue, 25 Dec 2007 13:08:50 +0100

userdir-ldap (0.3.15) unstable; urgency=low

  * userdir_gpg.py: fix RT #70 (sub-key support for mail gateway)
  * change *PK* mechanism to Linux standard ! mechanism, and check for
    it in the mail gateway for changes, too.
  * change packaging to make use of python-support, simplyfing scripts
    greatly.
  * Remove obsolete ud-killcrypt that wouldn't work with modern ldap anyways.

 -- Ryan Murray <rmurray@debian.org>  Sun, 12 Aug 2007 13:38:11 -0600

userdir-ldap (0.3.14) unstable; urgency=low

  * ud-generate:
    . Establish *PK* as mechanism for locked accounts with mail forwarding intact.
      No subscription to debian-private though, and no way to log in
    . Support [NOPASSWD] for generating configs that only don't
      contain the password for untrusted hosts that should receive
      the other regular export (patch by Andreas Barth <aba@not.so.argh.org>)
  * ud-host:
    . Import the base DN from the configuration file (patch by Andreas
      Barth <aba@not.so.argh.org>)
  * ud-roleadd:
    . Improved admin output
  * Removed unused and obsolete whrandom module (ud-host, ud-info, ud.py)
  * Query the LDAP server if no locally defined group with that name was