@@ -74,4 +74,4 @@ print "Updating LDAP directory..",
 sys.stdout.flush();
 l.add_s(Dn,[("gid",Group),
             ("gidNumber",str(Id)),
-            ("objectClass",("top", "debianGroup"))]);
+            ("objectClass", GroupObjectClasses)])
